# RCube

./: .gitignore  CMakeLists.txt  README.md  cube_base.h  main.cpp
RCube/: Cubein.txt  Doxyfile  README.md  cube.h  cube_base.h  cube_realization.cpp  glcube.cpp  glcube.h  main.cpp  rotations.cpp  solver.cpp  solver.h  test_cube.cpp  visual_cube.cpp
RCube/docs/html/: annotated.html  class_cube-members.html  class_cube.html  class_gl_cube-members.html  class_gl_cube.html  classes.html  classsolver-members.html  classsolver.html  cube_8h.html  cube_8h_source.html  cube__base_8h.html  cube__base_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  glcube_8cpp.html  glcube_8h.html  glcube_8h_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  main_8cpp.html  menudata.js  rotations_8cpp.html  solver_8h_source.html  struct_glcubie-members.html  struct_glcubie.html  structcubie-members.html  structcubie.html
RCube/docs/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  (+20 more)
RCube/docs/latex/: annotated.tex  class_cube.eps  class_cube.tex  class_gl_cube.eps  class_gl_cube.tex  classsolver.tex  cube_8h_source.tex  cube__base_8h.tex  cube__base_8h_source.tex  files.tex  glcube_8cpp.tex  glcube_8h.tex  glcube_8h_source.tex  hierarchy.tex  main_8cpp.tex  refman.tex  solver_8h_source.tex  struct_glcubie.eps  struct_glcubie.tex  structcubie.eps  structcubie.tex
RCubeTests/: MockCube.h  test_cube.cpp
docs/html/: annotated.html  class_cube-members.html  cube__realization_8cpp.html  files.html  globals.html  globals_vars.html  main_8cpp.html  solver_8cpp.html  visual__cube_8cpp.html
docs/html/search/: all_2.js  all_4.js  all_8.js  all_a.js  all_b.js  all_c.js  enums_0.js  files_0.js  files_2.js  files_4.js  functions_0.js  functions_2.js  functions_7.js  functions_9.js  functions_c.js  variables_0.js
docs/latex/: annotated.tex  class_cube.tex  cube_8h.tex  cube__realization_8cpp.tex  files.tex  refman.tex  rotations_8cpp.tex  solver_8cpp.tex  visual__cube_8cpp.tex
doctest/: CMakeLists.txt
myenv/: pyvenv.cfg
